src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process-H3C</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_AMID2_ID__c</fullName>
        <description>Create this field to show AMID2 on report &apos;Leads with converted information&apos;</description>
        <formula>Account__r.AMID__c</formula>
        <inlineHelpText>Create this field to show AMID2 on report &apos;Leads with converted information&apos;</inlineHelpText>
        <label>Account_AMID2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Account_18_ID__c</fullName>
        <description>Create this field to add &apos;Account 18 ID&apos; on report &apos;Leads with converted information&apos;</description>
        <formula>Account__r.Account_18_ID__c</formula>
        <inlineHelpText>Create this field to add &apos;Account 18 ID&apos; on report &apos;Leads with converted information&apos;</inlineHelpText>
        <label>Account_Account 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_MDM_ID__c</fullName>
        <description>Create this field to add &apos;MDM ID&apos; on report &apos;Leads with converted information&apos;</description>
        <formula>Account__r.MDM_ID__c</formula>
        <inlineHelpText>Create this field to add &apos;MDM ID&apos; on report &apos;Leads with converted information&apos;</inlineHelpText>
        <label>Account_MDM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorized_Buyer__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Authorized Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Budget</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>*Cancel Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Defined Need or Project</fullName>
                </value>
                <value>
                    <fullName>Insufficient Budget</fullName>
                </value>
                <value>
                    <fullName>Missing/Incorrect info</fullName>
                </value>
                <value>
                    <fullName>Contact is not a decision maker</fullName>
                </value>
                <value>
                    <fullName>Inadequate Timeframe</fullName>
                </value>
                <value>
                    <fullName>Duplicate Lead/Oppty</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact</fullName>
                </value>
                <value>
                    <fullName>Created Contact</fullName>
                </value>
                <value>
                    <fullName>Admin Use Only : Lead Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conv_Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User lookup, used in code &amp; should not be added to page layout.</description>
        <label>Conv Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Source__c</fullName>
        <defaultValue>&apos;Lead&apos;</defaultValue>
        <description>UL @ibreakingpoint 20151116 for mapping to opportunity</description>
        <label>*Deal Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Effective_Date__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Email Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Budget__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Estimated Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Externally_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Externally Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Assignment_Date__c</fullName>
        <label>First Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_No_Action_Date__c</fullName>
        <description>UL @ibreakingpoint 20151104</description>
        <label>*First No Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HPE_SFDC_ID__c</fullName>
        <description>UL @ibreakingpoint 20151117</description>
        <externalId>true</externalId>
        <label>HPE SFDC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isolation_Status_Date__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Isolation Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Isolation_Status__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Isolation Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Class__c</fullName>
        <formula>IF(AND( ISPICKVAL( Job_Function__c ,  &apos;Decision Office&apos; ) , ISPICKVAL( Job_Level__c , &apos;C Level&apos; ) ) , &apos;CEO&apos;, 
IF(AND( ISPICKVAL(Job_Function__c, &apos;IT department&apos;) ,ISPICKVAL( Job_Level__c , &apos;C Level&apos; )) , &apos;CIO&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Finance &amp; Procurement&apos;) ,ISPICKVAL( Job_Level__c , &apos;C Level&apos; )) , &apos;CFO&apos; ,
IF( AND( ISPICKVAL(Job_Function__c, &apos;Line of Business&apos;) ,ISPICKVAL( Job_Level__c , &apos;C Level&apos; )) , &apos;CXO&apos;,
IF( AND( ISPICKVAL(Job_Function__c, &apos;Unknown&apos;) ,ISPICKVAL( Job_Level__c , &apos;C Level&apos; )) , &apos;CXO&apos; ,
IF(AND( ISPICKVAL( Job_Function__c ,  &apos;Decision Office&apos; ) , ISPICKVAL( Job_Level__c , &apos;Executive&apos; ) ) , &apos;CXO&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;IT department&apos;) ,ISPICKVAL( Job_Level__c , &apos;Executive&apos;) ) , &apos;CIO&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Finance &amp; Procurement&apos;) ,ISPICKVAL( Job_Level__c , &apos;Executive&apos;) ) , &apos;CFO&apos;,
IF( AND( ISPICKVAL(Job_Function__c, &apos;Line of Business&apos;) ,ISPICKVAL( Job_Level__c , &apos;Executive&apos; )) , &apos;CXO&apos;,
IF( AND( ISPICKVAL(Job_Function__c, &apos;Unknown&apos;) ,ISPICKVAL( Job_Level__c , &apos;Executive&apos;) ) , &apos;CXO&apos; ,
IF(AND( ISPICKVAL( Job_Function__c ,  &apos;Decision Office&apos; ) , ISPICKVAL( Job_Level__c , &apos;Manager&apos; ) ) , &apos;LOB manager&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;IT department&apos;) ,ISPICKVAL( Job_Level__c , &apos;Manager&apos; )) , &apos;IT Manager&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Finance &amp; Procurement&apos;) ,ISPICKVAL( Job_Level__c , &apos;Manager&apos; )) , &apos;Procurement Manager&apos; ,
IF( AND( ISPICKVAL(Job_Function__c, &apos;Line of Business&apos;) ,ISPICKVAL( Job_Level__c , &apos;Manager&apos; )) , &apos;LOB manager&apos; ,
IF( AND( ISPICKVAL(Job_Function__c, &apos;Unknown&apos;) ,ISPICKVAL( Job_Level__c , &apos;Manager&apos; )) , &apos;Unknown&apos; ,
IF(AND( ISPICKVAL( Job_Function__c ,  &apos;Decision Office&apos; ) , ISPICKVAL( Job_Level__c , &apos;Professional&apos; ) ) , &apos;LOB professional&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;IT department&apos;) ,ISPICKVAL( Job_Level__c , &apos;Professional&apos;) ) , &apos;IT Professional&apos;, 
IF( AND( ISPICKVAL(Job_Function__c, &apos;Finance &amp; Procurement&apos;) ,ISPICKVAL( Job_Level__c , &apos;Professional&apos; ) ), &apos;Procurement Professional&apos; ,
IF( AND( ISPICKVAL(Job_Function__c, &apos;Line of Business&apos;) ,ISPICKVAL( Job_Level__c , &apos;Professional&apos; )) , &apos;LOB professional&apos; ,
IF( AND( ISPICKVAL(Job_Function__c, &apos;Unknown&apos;) ,ISPICKVAL( Job_Level__c , &apos;Professional&apos;)), &apos;Unknown&apos;,&apos;Unknown&apos;))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Office</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Procurement</fullName>
                </value>
                <value>
                    <fullName>IT department</fullName>
                </value>
                <value>
                    <fullName>Line of Business</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C Level</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Assignment_Date__c</fullName>
        <label>Last Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_18_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID1__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>**Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID_MS__c</fullName>
        <description>UL @ibreakingpoint 20151110</description>
        <label>Lead ID MS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Qualifier__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Lead Qualifier</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Lead Source-Most Recent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telemarketing-inbound</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>3rd party pay by leads (Telemarketing-outbound)</fullName>
                </value>
                <value>
                    <fullName>Event registration</fullName>
                </value>
                <value>
                    <fullName>Virtual event</fullName>
                </value>
                <value>
                    <fullName>SEM-paid search</fullName>
                </value>
                <value>
                    <fullName>WeChat/QQ/Weibo</fullName>
                </value>
                <value>
                    <fullName>Web site (organic, SEO)</fullName>
                </value>
                <value>
                    <fullName>Digital media coop</fullName>
                </value>
                <value>
                    <fullName>Vendor-MI/Survey</fullName>
                </value>
                <value>
                    <fullName>Vendor-Data purchase</fullName>
                </value>
                <value>
                    <fullName>Sms</fullName>
                </value>
                <value>
                    <fullName>Edm registration</fullName>
                </value>
                <value>
                    <fullName>DM registration</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <description>UL @ibreakingpoint 20151112 for Report, 18 changed</description>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Reassign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <description>UL @ibreakingpoint 20151103</description>
        <label>*Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Marketing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Effective_Date__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Mobile Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Mobile Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UL @ibreakingpoint 20151028</description>
        <label>New Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Effective_Date__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Phone Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Phone Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Preferred Method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Office Phone</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Wechat</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prointerest_Quntity__c</fullName>
        <label>Prointerest_Quntity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchaser_Role__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Purchaser Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Sponsor</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluator/Recommender</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Key Contact</fullName>
                </value>
                <value>
                    <fullName>No Role</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reassign_Date__c</fullName>
        <description>UL @ibreakingpoint 20151104</description>
        <label>*Reassign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Line_Manager__c</fullName>
        <description>For 8D email notification. 
UL @ibreakingpoint 20151103</description>
        <label>*Second Line Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Timeframe_to_Buy__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Timeframe to Buy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;1 week</fullName>
                </value>
                <value>
                    <fullName>&lt;1 month</fullName>
                </value>
                <value>
                    <fullName>1-3 month</fullName>
                </value>
                <value>
                    <fullName>4-6 month</fullName>
                </value>
                <value>
                    <fullName>7-9month</fullName>
                </value>
                <value>
                    <fullName>10-12month</fullName>
                </value>
                <value>
                    <fullName>&gt;12month</fullName>
                </value>
                <value>
                    <fullName>Unclear</fullName>
                </value>
                <value>
                    <fullName>No Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wechat__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Wechat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeiBo__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>WeiBo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Call_Center_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.SALUTATION</columns>
        <columns>Account__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Status__c</columns>
        <columns>Budget__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Queue</filterScope>
        <label>Call Center Queue</label>
        <language>en_US</language>
        <queue>Call_Center_Queue</queue>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Lead_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>My Unread Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Account__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Status__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Nurture_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Nurture Queue</label>
        <queue>Nurture_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Operation_Queue_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Qualifier__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Operation Queue</label>
        <language>en_US</language>
        <queue>Operation_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Reassign_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>Lead_Status__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>Reassign</value>
        </filters>
        <label>Reassign Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reject_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Lead_Status__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Status__c</field>
            <operation>equals</operation>
            <value>Reject</value>
        </filters>
        <label>Reject Leads</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Lead_H3C</fullName>
        <active>true</active>
        <businessProcess>Lead Process-H3C</businessProcess>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Lead-H3C</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>At_Least_1_phone</fullName>
        <active>true</active>
        <description>UL @ibreakingpoint 20151103</description>
        <errorConditionFormula>AND( 
OR( 
ISBLANK(MobilePhone), 
ISNULL(MobilePhone) 
), 
OR( 
ISBLANK(Phone), 
ISNULL(Phone) 
))</errorConditionFormula>
        <errorMessage>Phone and mobile should provide at least one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Lead_Owner_ProfileSales</fullName>
        <active>true</active>
        <errorConditionFormula>and(!ISNEW(),ischanged(OwnerId ),CONTAINS(Owner:User.Profile.Name , &apos;Sales&apos;),or(ISBLANK(Account__c), ISBLANK( text(Timeframe_to_Buy__c) ), ISBLANK( text(Budget__c )), Prointerest_Quntity__c &lt;= 0  
)
)</errorConditionFormula>
        <errorMessage>If you want to assign lead to sales, Budget, Timeframe to Buy, Account and Product Interest are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Status_Closed_Reason_Required</fullName>
        <active>true</active>
        <description>UL @ibreakingpoint 20151103created , 18 changed status API name</description>
        <errorConditionFormula>AND( 
ISPICKVAL(  Lead_Status__c  ,&apos;Closed&apos;), 
ISPICKVAL( Closed_Reason__c , &apos;&apos; 
))</errorConditionFormula>
        <errorDisplayField>Closed_Reason__c</errorDisplayField>
        <errorMessage>Closed Reason should be chosen if Lead Status is Closed.</errorMessage>
    </validationRules>
</CustomObject>